fixed spacing and fonts

--- a/styles/partials/_content-section.scss
+++ b/styles/partials/_content-section.scss
@@ -110,7 +110,7 @@
         width: 85%;
         margin: 0 auto; 
         display: flex;
-        gap: 3.2rem; 
+        gap: 3rem; 
         font-size: 1.3rem;
     }
 }
