--- a/styles/partials/_img-gallery.scss
+++ b/styles/partials/_img-gallery.scss
@@ -19,12 +19,13 @@
 .gallery__title{
     padding: 2rem 0;
     margin-left: 2rem;
+    font-size: 2.15rem;
 }
 
 @include tablet{
 .gallery__title{
     margin-left: 2rem;
-    font-size: 3rem; 
+    font-size: 3.25rem; 
    }
 }
 
